<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search, should appear as action button -->
    <!--<item
        android:id="@+id/action_star"
        android:icon="@drawable/estrella"
        android:title="@string/estrella"
        app:showAsAction="always" />-->

    <item
        android:id="@+id/contacto"
        android:title="@string/contacto"
        android:orderInCategory="100" />

    <item
        android:id="@+id/acerca"
        android:title="@string/acerca"
        android:orderInCategory="101" />

    <item
        android:id="@+id/confCuenta"
        android:title="@string/configura_cuenta"
        android:orderInCategory="102" />

    <item
        android:id="@+id/recNotif"
        android:title="@string/recibe_notif"
        android:orderInCategory="102" />

</menu>