<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyBioActivity"
    android:orientation="vertical">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circularImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/foto"
        app:civ_border_color="@color/gray"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/colorAccent"
        app:civ_shadow_radius="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mi_nombre"
        android:textSize="@dimen/textSize_nombreCardV"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mi_bio1"
        android:textSize="@dimen/textSize_nombreCardV"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mi_bio2"
        android:textSize="@dimen/textSize_nombreCardV"
        android:textStyle="bold"
        android:layout_marginRight="@dimen/right"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginTop="@dimen/top"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>